CHATS_SIT/force-app/main/default/objects/T_APPLN_CHILD_CARE__c.object
<CustomObject>
  <!--  <enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <formula>IDN_INDIVIDUAL__r.IDN_CBMS_CLIENT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDN CLIENT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHILD_NAME__c</fullName>
        <label>Child Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNT_HOUR_AUTHORIZED_CHILDCARE__c</fullName>
        <label>Authorized Childcare Hours</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNT_HOUR_ON_FRI__c</fullName>
        <label>CNT_HOUR_ON_FRI</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNT_HOUR_ON_MON__c</fullName>
        <label>CNT_HOUR_ON_MON</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNT_HOUR_ON_SAT__c</fullName>
        <label>CNT_HOUR_ON_SAT</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNT_HOUR_ON_SUN__c</fullName>
        <label>CNT_HOUR_ON_SUN</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNT_HOUR_ON_THU__c</fullName>
        <label>CNT_HOUR_ON_THU</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNT_HOUR_ON_TUE__c</fullName>
        <label>CNT_HOUR_ON_TUE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNT_HOUR_ON_WED__c</fullName>
        <label>CNT_HOUR_ON_WED</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_CARE__c</fullName>
        <label>Care Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <label>DTE_BEGIN_EFFV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_CARE__c</fullName>
        <label>Care End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_WITH_LAST_PROVIDER__c</fullName>
        <label>DTE_WITH_LAST_PROVIDER</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FT_NONSCHOOL_DAYS__c</fullName>
        <label>FT_NONSCHOOL_DAYS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRADE__c</fullName>
        <label>GRADE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_CBMS_PROVR__c</fullName>
        <label>CBMS Provider ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_INDIVIDUAL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_INDIVIDUAL</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Child Cares</relationshipLabel>
        <relationshipName>Application_Child_Cares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IND_NEED_CHILD_CARE__c</fullName>
        <label>IND_NEED_CHILD_CARE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_NEED_SPECIAL_CARE__c</fullName>
        <label>IND_NEED_SPECIAL_CARE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_PROVIDER_CHANGE__c</fullName>
        <label>IND_PROVIDER_CHANGE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_SCHOOL_AGE_CARE__c</fullName>
        <label>IND_SCHOOL_AGE_CARE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_FACILITY__c</fullName>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHOOL_DISCTRICT__c</fullName>
        <label>SCHOOL_DISCTRICT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday_Evening_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Monday Evening Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday_Overnight_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Monday Overnight Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Tuesday_Evening_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tuesday Evening Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuesday_Overnight_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tuesday Overnight Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Wednesday_Evening_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Wednesday Evening Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wednesday_Overnight_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Wednesday Overnight Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Thursday_Evening_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Thursday Evening Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thursday_Overnight_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Thursday Overnight Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Friday_Evening_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Friday Evening Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_Overnight_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Friday Overnight Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Saturday_Evening_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Saturday Evening Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday_Overnight_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Saturday Overnight Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Sunday_Evening_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sunday Evening Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday_Overnight_Care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sunday Overnight Care</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Application Child Care</label>
    <nameField>
	<displayFormat>ACHIDCARE-{0}</displayFormat>
        <label>T_APPLN_CHILD_CARE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Child Cares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>